--- a/P009362.opf/meta.yml
+++ b/P009362.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009362
+id: P009362
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W26033
   title: གཅོད་འཛིན་པ་རང་གྲོལ་གྱི་འདོན་ཆའི་སྐོར
-  volume: ''
   author: ''
+  volumes: {}
