--- a/P009362.opf/meta.yml
+++ b/P009362.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W26033
   title: གཅོད་འཛིན་པ་རང་གྲོལ་གྱི་འདོན་ཆའི་སྐོར
   author: ''
-  volumes: {}
+  volumes:
+    47da805597ff417cac775fb8f57e0125:
+      image_group_id: I1KG2906
+      title: ''
+      volume_number: 1
+      total_pages: 464
