--- a/P009362.opf/layers/v001/Pagination.yml
+++ b/P009362.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2f1e5eca892044e38d39e5188f9d218e
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   037b01026b2e4e03b78d922933a8e4dc:
