--- a/P009362.opf/meta.yml
+++ b/P009362.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009362
 initial_creation_type: ocr
 created_at: 26/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:35:12.309155
 source_metadata:
   id: bdr:W26033
   title: གཅོད་འཛིན་པ་རང་གྲོལ་གྱི་འདོན་ཆའི་སྐོར
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 464
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
